k8s/infrastructure/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: is-stag-ingress
  annotations:
    cert-manager.io/issuer: selfsigned-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - is-stag.cz
      secretName: selfsigned-cert-tls
  rules:
    - host: is-stag.cz
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: keycloak-http
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8100
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-client
                port:
                  number: 5173
